force-app/main/default/objects/Aeroporto__c/Aeroporto__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar informa��es de aeroportos.</description>
    <label>Aeroporto</label>
    <nameField>
        <label>Nome do Aeroporto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aeroportos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>