force-app/main/default/objects/Aeroporto__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Aeroportos</relationshipLabel>
    <relationshipName>Aeroportos</relationshipName>
    <type>Lookup</type>
</CustomField>