force-app/main/default/objects/Aeroporto__c/fields/Estado_r__c.field-meta.xml
<CustomField>
    <fullName>Estado_r__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Estado</relationshipLabel>
    <relationshipName>Estado</relationshipName>
    <type>Lookup</type>
</CustomField>